--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  camera:
+  path_provider:
+  path:
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: 
   firebase_core: ^2.1.0
   cloud_firestore: ^4.0.2
 
