--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.1.0
   cloud_firestore: ^4.0.2
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
