--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.1.0
   cloud_firestore: ^4.0.2
   provider: ^6.0.4
+  firebase_auth: ^4.1.2
 
 dev_dependencies:
   flutter_test:
