--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   cloud_firestore: ^4.0.2
   provider: ^6.0.4
   firebase_auth: ^4.1.2
-
+  image_picker: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
