--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^6.0.4
   firebase_auth: ^4.1.2
   image_picker: 
+  firebase_storage: ^11.0.6
+  uuid: ^3.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
